--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,8 @@
+/* ============================================= */
+/*              Header                      */
+/* ============================================= */
+
 .main-header {
-    margin: 0 auto;
     text-align: center;
     h1 {
         color: black;
