--- a/scss/components/_photo-flex.scss
+++ b/scss/components/_photo-flex.scss
@@ -1,9 +1,13 @@
+/* ============================================= */
+/*              Photo Display                       */
+/* ============================================= */
+
 .container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: center;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     .col img {
         width: 300px;
