--- a/scss/components/_search-bar.scss
+++ b/scss/components/_search-bar.scss
@@ -1,5 +1,8 @@
+/* ============================================= */
+/*              Search Bar                       */
+/* ============================================= */
+
 .search {
-    margin: auto;
     text-align: center;
     input {
         width: 320px;
